# SecureHardwareExtension

./: .env  LICENSE  README.md  SecureHardwareExtension.py  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: pypi-upload.yml  python-test.yml
SecureHardwareExtension/: __init__.py  constants.py  datatypes.py  memory_update.py
SecureHardwareExtension/key_slots/: autosar.py
secure_hardware_extension/: constants.py  datatypes.py  memory_update.py
secure_hardware_extension/key_slots/: __init__.py  autosar.py  base.py
source/: __init__.py  constants.py  datatypes.py  memory_update.py
source/key_slots/: __init__.py  base.py
tests/unit_tests/: test_datatypes.py  test_memory_update.py
